Fixed some issues

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrempelApp">
         <activity
-            android:name=".presentationLayer.splashScreen.TrempelSplashActivity"
+            android:name=".presentation_layer.splash_screen.TrempelSplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
