--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -53,8 +57,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-rc01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0-rc01'
 
     //other implementations
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
