--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         google()
         mavenCentral()
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url 'https://maven.google.com'
         }
     }
     dependencies {
