--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
         mavenCentral()
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url 'https://maven.google.com'
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:7.1.0"
         // NOTE: Do not place your application dependencies here; they belong
