--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     //room
     implementation "androidx.room:room-runtime:2.4.1"
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     kapt "androidx.room:room-compiler:2.4.1"
     implementation "androidx.room:room-rxjava2:2.4.1"
     implementation "androidx.room:room-ktx:2.4.1"
@@ -52,6 +53,9 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
 
     implementation project(path: ':utils')
+
+    //maps
+    implementation "com.google.android.gms:play-services-maps:18.0.2"
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
