--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     //dagger implementation
     implementation "com.google.dagger:dagger:2.40"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     kapt "com.google.dagger:dagger-compiler:2.40"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
 
@@ -97,17 +98,18 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    // Integration with activities
+    //compose
     implementation 'androidx.activity:activity-compose:1.4.0'
-    // Compose Material Design
     implementation 'androidx.compose.material:material:1.1.1'
-    // Animations
     implementation 'androidx.compose.animation:animation:1.1.1'
-    // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
-    // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
+
+    //maps compose
+    implementation "com.google.maps.android:maps-compose:1.0.0"
+    implementation "com.google.android.gms:play-services-maps:18.0.2"
+
 
     //tests implementation
     testImplementation 'junit:junit:4.13.2'
