--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:name=".TrempelApplication"
@@ -15,6 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrempelApp">
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC0PQiv8COvz7TaDIPVc2JAs2CXpXpflZQ" />
         <activity
             android:name=".presentation_layer.logIn_screen.TrempelLogInActivity"
             android:exported="false" />
